--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
-  <link rel="canonical" href="https://tonsite.com/" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
@@ -27,11 +26,7 @@
     .demo-thumb { position: relative; overflow: hidden; border-radius: 0.75rem; }
     .demo-thumb img { width: 100%; height: auto; transition: transform 0.5s ease; border-radius: 0.75rem; }
     .demo-thumb:hover img { transform: scale(1.02); }
-    .demo-overlay {
-      position: absolute; inset: 0;
-      background: rgba(0,0,0,0.1);
-      opacity: 0; transition: opacity 0.3s ease;
-    }
+    .demo-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.1); opacity: 0; transition: opacity 0.3s ease; }
     .demo-thumb:hover .demo-overlay { opacity: 1; }
     input, textarea { outline: none; }
     input:focus, textarea:focus { border-color: var(--brand); box-shadow: 0 0 0 2px rgba(0,31,63,0.2); }
@@ -42,15 +37,44 @@
       50% { opacity: 0.5; transform: scaleX(0.5); }
       100% { opacity: 1; transform: scaleX(1); }
     }
-    .animate-build {
-      transform-origin: left;
-      animation: build 2s ease-in-out infinite; /* Durée plus longue + boucle infinie */
-    }
+    .animate-build { transform-origin: left; animation: build 2s ease-in-out infinite; }
     .animate-build.delay-100 { animation-delay: 0.1s; }
     .animate-build.delay-200 { animation-delay: 0.4s; }
     .animate-build.delay-300 { animation-delay: 0.7s; }
     .animate-build.delay-400 { animation-delay: 1s; }
     .animate-build.delay-500 { animation-delay: 1.3s; }
+
+    /* Style écran PC pour le HERO */
+    .pc-screen {
+      width: 100%;
+      max-width: 480px; /* plus grand */
+      height: 280px;
+      background: #f5f5f5;
+      border-radius: 12px;
+      box-shadow: 0 12px 25px rgba(0,0,0,0.15);
+      border: 1px solid #ccc;
+      position: relative;
+      overflow: hidden;
+    }
+    .pc-screen-header {
+      height: 24px;
+      width: 100%;
+      background: #ddd;
+      display: flex;
+      align-items: center;
+      padding: 0 8px;
+      gap: 6px;
+    }
+    .pc-screen-header .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+    }
+    .dot.red { background: #ff5f57; }
+    .dot.yellow { background: #ffbd2e; }
+    .dot.green { background: #27c93f; }
+    .pc-screen-body { padding: 12px; }
+
   </style>
 </head>
 
@@ -58,7 +82,7 @@
 
   <!-- HEADER -->
   <header class="sticky top-0 z-40 bg-white/90 border-b border-gray-200">
-    <div class="max-w-5xl mx-auto px-6 py-4 flex items-center justify-between">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <div class="flex items-center gap-4">
         <div class="w-10 h-10 rounded-md bg-[var(--brand)] flex items-center justify-center text-white font-semibold">P1</div>
         <div>
@@ -75,44 +99,48 @@
   </header>
 
   <!-- MAIN -->
-  <main class="max-w-5xl mx-auto px-6 py-16 space-y-20">
+  <main class="w-full">
 
     <!-- HERO -->
-    <section class="grid md:grid-cols-2 gap-10 items-center">
-      <div class="fade">
-        <h1 class="text-4xl md:text-5xl font-bold mb-4" style="color:var(--brand)">Une page web pro, rapide et visible — livrée en 72h</h1>
-        <p class="text-gray-700 mb-6">ProOnePage conçoit pour vous une page unique (one-page) : claire, responsive et optimisée pour être trouvée localement. Idéale pour artisans, indépendants, commerciaux et petites entreprises.</p>
-        <ul class="space-y-2 text-gray-700 mb-6">
-          <li>✔ Design professionnel personnalisé</li>
-          <li>✔ Contenu structuré : présentation, services, carte & formulaire</li>
-          <li>✔ Optimisation locale pour Google</li>
-          <li>✔ Livraison en <strong>72 heures</strong></li>
-        </ul>
-        <div class="flex gap-3">
-          <a href="#contact" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md">Commander — 149€</a>
-          <a href="#exemples" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md">Voir la démo</a>
+    <section class="w-full bg-gray-50 py-16 px-6">
+      <div class="grid md:grid-cols-2 gap-10 items-center max-w-full mx-auto">
+        <div class="fade">
+          <h1 class="text-4xl md:text-5xl font-bold mb-4" style="color:var(--brand)">Une page web pro, rapide et visible — livrée en 72h</h1>
+          <p class="text-gray-700 mb-6">ProOnePage conçoit pour vous une page unique (one-page) : claire, responsive et optimisée pour être trouvée localement. Idéale pour artisans, indépendants, commerciaux et petites entreprises.</p>
+          <ul class="space-y-2 text-gray-700 mb-6">
+            <li>✔ Design professionnel personnalisé</li>
+            <li>✔ Contenu structuré : présentation, services, carte & formulaire</li>
+            <li>✔ Optimisation locale pour Google</li>
+            <li>✔ Livraison en <strong>72 heures</strong></li>
+          </ul>
+          <div class="flex gap-3">
+            <a href="#contact" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md">Commander — 149€</a>
+            <a href="#exemples" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md">Voir la démo</a>
+          </div>
         </div>
-      </div>
 
-      <!-- Animation de page qui se construit (boucle infinie) -->
-      <div class="fade flex justify-center items-center">
-        <div class="relative w-64 h-40 bg-gray-100 rounded-lg shadow-md overflow-hidden border border-gray-300">
-          <!-- Header -->
-          <div class="bg-[var(--brand)] h-4 w-full animate-pulse"></div>
-          <!-- Section 1 -->
-          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-100"></div>
-          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-200"></div>
-          <!-- Section 2 -->
-          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-300"></div>
-          <div class="mt-1 mx-2 h-2 bg-gray-300 rounded animate-build delay-400"></div>
-          <!-- Footer -->
-          <div class="absolute bottom-2 left-2 right-2 h-2 bg-gray-400 rounded animate-build delay-500"></div>
+        <!-- Animation écran PC -->
+        <div class="fade flex justify-center items-center">
+          <div class="pc-screen">
+            <div class="pc-screen-header">
+              <div class="dot red"></div>
+              <div class="dot yellow"></div>
+              <div class="dot green"></div>
+            </div>
+            <div class="pc-screen-body">
+              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-100"></div>
+              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-200"></div>
+              <div class="mt-2 h-3 bg-gray-300 rounded animate-build delay-300"></div>
+              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-400"></div>
+              <div class="mt-2 h-3 bg-gray-400 rounded animate-build delay-500"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- OFFRE -->
-    <section id="offre" class="bg-white rounded-xl p-8 shadow-sm fade">
+    <section id="offre" class="bg-white rounded-xl p-8 shadow-sm fade max-w-7xl mx-auto">
       <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule unique • 149€</h2>
       <div class="grid md:grid-cols-3 gap-6">
         <div class="p-4 border rounded">
@@ -138,7 +166,7 @@
     </section>
 
     <!-- EXEMPLE -->
-    <section id="exemples" class="bg-white rounded-xl p-8 shadow-sm fade text-center">
+    <section id="exemples" class="bg-white rounded-xl p-8 shadow-sm fade text-center max-w-7xl mx-auto">
       <h3 class="text-2xl font-semibold mb-6" style="color:var(--brand)">Exemple de site réalisé</h3>
       <div class="max-w-4xl mx-auto">
         <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="demo-thumb inline-block shadow-lg">
@@ -150,7 +178,7 @@
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="bg-white rounded-xl p-8 shadow-sm fade">
+    <section id="contact" class="bg-white rounded-xl p-8 shadow-sm fade max-w-7xl mx-auto">
       <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Commander / Contact</h3>
       <div class="grid md:grid-cols-2 gap-6">
         <div>
@@ -184,7 +212,6 @@
             <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
           </div>
 
-          <!-- BOUTON FORMULAIRE VISIBLE -->
           <button type="submit" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md mt-3">
             Envoyer
           </button>
@@ -200,20 +227,16 @@
   </main>
 
   <script>
-    // Année dynamique
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Animation fade avec IntersectionObserver pour déclenchement à l'apparition
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
-        if(entry.isIntersecting) {
+        if(entry.isIntersecting){
           entry.target.style.opacity = 1;
           entry.target.style.transform = 'translateY(0)';
           observer.unobserve(entry.target);
         }
       });
     }, { threshold: 0.1 });
-
     document.querySelectorAll('.fade').forEach(el => observer.observe(el));
   </script>
 </body>
