--- a/index.html
+++ b/index.html
@@ -6,78 +6,58 @@
   <title>ProOnePage — Page pro en 72h · 149€</title>
   <meta name="description" content="ProOnePage — Je crée votre page web professionnelle, rapide et responsive. Idéal pour artisans, indépendants et petites entreprises. Livraison en 72h." />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="ProOnePage — Page pro en 72h · 149€" />
-  <meta property="og:description" content="Page web simple, design pro, formulaire de contact et optimisation locale. Démo: officielstephanewinckel.vercel.app" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=ProOnePage" />
-
   <!-- Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <style>
-    :root { --brand: #001f3f; } /* Bleu marine */
+    :root { --brand: #001f3f; }
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; }
     .btn { transition: all .18s ease; cursor: pointer; }
     .btn:hover { transform: translateY(-3px); }
     header { backdrop-filter: saturate(120%) blur(4px); }
     .fade { opacity: 0; transform: translateY(12px); animation: fade 0.6s forwards; }
     @keyframes fade { to { opacity: 1; transform: translateY(0); } }
-    .demo-thumb { position: relative; overflow: hidden; border-radius: 0.75rem; }
-    .demo-thumb img { width: 100%; height: auto; transition: transform 0.5s ease; border-radius: 0.75rem; }
-    .demo-thumb:hover img { transform: scale(1.02); }
-    .demo-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.1); opacity: 0; transition: opacity 0.3s ease; }
-    .demo-thumb:hover .demo-overlay { opacity: 1; }
     input, textarea { outline: none; }
     input:focus, textarea:focus { border-color: var(--brand); box-shadow: 0 0 0 2px rgba(0,31,63,0.2); }
 
-    /* Animation "construction" des blocs */
+    /* Animation page */
     @keyframes build {
-      0% { opacity: 0; transform: scaleX(0); }
-      50% { opacity: 0.5; transform: scaleX(0.5); }
-      100% { opacity: 1; transform: scaleX(1); }
+      0% { opacity: 0; transform: translateY(5px) scaleX(0.8); }
+      50% { opacity: 0.7; transform: translateY(-2px) scaleX(1.05); }
+      100% { opacity: 1; transform: translateY(0) scaleX(1); }
     }
     .animate-build { transform-origin: left; animation: build 2s ease-in-out infinite; }
-    .animate-build.delay-100 { animation-delay: 0.1s; }
-    .animate-build.delay-200 { animation-delay: 0.4s; }
-    .animate-build.delay-300 { animation-delay: 0.7s; }
-    .animate-build.delay-400 { animation-delay: 1s; }
-    .animate-build.delay-500 { animation-delay: 1.3s; }
 
-    /* Style écran PC pour le HERO */
+    /* Hero écran PC avec pied */
+    .pc-screen-container {
+      position: relative; display: flex; justify-content: center; width: 100%;
+    }
     .pc-screen {
-      width: 100%;
-      max-width: 480px; /* plus grand */
-      height: 280px;
-      background: #f5f5f5;
-      border-radius: 12px;
-      box-shadow: 0 12px 25px rgba(0,0,0,0.15);
-      border: 1px solid #ccc;
-      position: relative;
-      overflow: hidden;
+      width: 480px; max-width: 90%; height: 280px; background: #f5f5f5; border-radius: 12px;
+      border: 1px solid #ccc; box-shadow: 0 12px 25px rgba(0,0,0,0.15); overflow: hidden; position: relative;
     }
     .pc-screen-header {
-      height: 24px;
-      width: 100%;
-      background: #ddd;
-      display: flex;
-      align-items: center;
-      padding: 0 8px;
-      gap: 6px;
+      height: 24px; width: 100%; background: #ddd; display: flex; align-items: center; padding: 0 8px; gap: 6px;
     }
-    .pc-screen-header .dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-    }
+    .pc-screen-header .dot { width: 10px; height: 10px; border-radius: 50%; }
     .dot.red { background: #ff5f57; }
     .dot.yellow { background: #ffbd2e; }
     .dot.green { background: #27c93f; }
-    .pc-screen-body { padding: 12px; }
+
+    .pc-screen-body { padding: 12px; display: flex; flex-direction: column; gap: 6px; }
+
+    /* Pied de l’écran */
+    .pc-screen-foot {
+      width: 140px; height: 14px; background: #ddd; border-radius: 6px; margin: 8px auto 0;
+    }
+
+    /* Blocs d’animation différents */
+    .block-line { height: 12px; background: #ccc; border-radius: 4px; }
+    .block-square { width: 40px; height: 40px; background: #bbb; border-radius: 6px; }
+    .block-button { width: 80px; height: 20px; background: #aaa; border-radius: 6px; }
 
   </style>
 </head>
-
 <body class="bg-gray-50 leading-relaxed">
 
   <!-- HEADER -->
@@ -98,13 +78,13 @@
     </div>
   </header>
 
-  <!-- MAIN -->
+  <!-- MAIN HERO -->
   <main class="w-full">
 
-    <!-- HERO -->
     <section class="w-full bg-gray-50 py-16 px-6">
       <div class="grid md:grid-cols-2 gap-10 items-center max-w-full mx-auto">
-        <div class="fade">
+        <!-- Texte -->
+        <div class="fade w-full">
           <h1 class="text-4xl md:text-5xl font-bold mb-4" style="color:var(--brand)">Une page web pro, rapide et visible — livrée en 72h</h1>
           <p class="text-gray-700 mb-6">ProOnePage conçoit pour vous une page unique (one-page) : claire, responsive et optimisée pour être trouvée localement. Idéale pour artisans, indépendants, commerciaux et petites entreprises.</p>
           <ul class="space-y-2 text-gray-700 mb-6">
@@ -113,14 +93,14 @@
             <li>✔ Optimisation locale pour Google</li>
             <li>✔ Livraison en <strong>72 heures</strong></li>
           </ul>
-          <div class="flex gap-3">
+          <div class="flex gap-3 flex-wrap">
             <a href="#contact" class="btn bg-[var(--brand)] text-white px-5 py-3 rounded-md">Commander — 149€</a>
             <a href="#exemples" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md">Voir la démo</a>
           </div>
         </div>
 
-        <!-- Animation écran PC -->
-        <div class="fade flex justify-center items-center">
+        <!-- Écran PC avec animation -->
+        <div class="fade pc-screen-container">
           <div class="pc-screen">
             <div class="pc-screen-header">
               <div class="dot red"></div>
@@ -128,116 +108,21 @@
               <div class="dot green"></div>
             </div>
             <div class="pc-screen-body">
-              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-100"></div>
-              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-200"></div>
-              <div class="mt-2 h-3 bg-gray-300 rounded animate-build delay-300"></div>
-              <div class="mt-1 h-3 bg-gray-300 rounded animate-build delay-400"></div>
-              <div class="mt-2 h-3 bg-gray-400 rounded animate-build delay-500"></div>
+              <div class="block-line animate-build delay-100"></div>
+              <div class="block-square animate-build delay-200"></div>
+              <div class="block-line animate-build delay-300"></div>
+              <div class="block-button animate-build delay-400"></div>
+              <div class="block-square animate-build delay-500"></div>
+              <div class="block-line animate-build delay-600"></div>
             </div>
           </div>
         </div>
+
+        <!-- Pied de l’écran -->
+        <div class="pc-screen-foot"></div>
       </div>
     </section>
-
-    <!-- OFFRE -->
-    <section id="offre" class="bg-white rounded-xl p-8 shadow-sm fade max-w-7xl mx-auto">
-      <h2 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Ce qui est inclus — Formule unique • 149€</h2>
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="p-4 border rounded">
-          <h4 class="font-medium mb-2">Design personnalisé</h4>
-          <p class="text-sm text-gray-600">Couleurs, logo, typographie et accroche adaptés à votre activité.</p>
-        </div>
-        <div class="p-4 border rounded">
-          <h4 class="font-medium mb-2">Contenu & contact</h4>
-          <p class="text-sm text-gray-600">Sections présentation, services, carte & formulaire de contact opérationnel.</p>
-        </div>
-        <div class="p-4 border rounded">
-          <h4 class="font-medium mb-2">Mise en ligne rapide</h4>
-          <p class="text-sm text-gray-600">Hébergement simple (ou livraison des fichiers) + nom de domaine en option.</p>
-        </div>
-      </div>
-
-      <div class="mt-6 bg-gray-50 p-4 rounded border text-center">
-        <div class="text-sm text-gray-500">Prix clair</div>
-        <div class="mt-2 text-3xl font-bold" style="color:var(--brand)">149€</div>
-        <div class="text-sm text-gray-500">Livré en 72h après validation des éléments</div>
-        <a href="#contact" class="mt-4 inline-block bg-[var(--brand)] text-white px-4 py-2 rounded-md">Commander maintenant</a>
-      </div>
-    </section>
-
-    <!-- EXEMPLE -->
-    <section id="exemples" class="bg-white rounded-xl p-8 shadow-sm fade text-center max-w-7xl mx-auto">
-      <h3 class="text-2xl font-semibold mb-6" style="color:var(--brand)">Exemple de site réalisé</h3>
-      <div class="max-w-4xl mx-auto">
-        <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="demo-thumb inline-block shadow-lg">
-          <img src="./screen-site.jpeg" alt="Aperçu Dirickx Luxembourg" class="rounded-xl" />
-          <div class="demo-overlay"></div>
-        </a>
-        <p class="text-sm text-gray-500 mt-3">Cliquez sur l’image pour visiter le site complet.</p>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="bg-white rounded-xl p-8 shadow-sm fade max-w-7xl mx-auto">
-      <h3 class="text-2xl font-semibold mb-4" style="color:var(--brand)">Commander / Contact</h3>
-      <div class="grid md:grid-cols-2 gap-6">
-        <div>
-          <p class="text-gray-700 mb-4">
-            Prêt à lancer ? Remplis le formulaire ci-dessous ou envoie un message direct à 
-            <strong style="color:var(--brand)">proonepage.pro@gmail.com</strong>.
-          </p>
-          <ul class="text-sm text-gray-600 space-y-1">
-            <li>✔ Prix : 149€</li>
-            <li>✔ Livraison : 72 heures après validation</li>
-            <li>✔ Paiement : virement ou PayPal (à configurer)</li>
-          </ul>
-        </div>
-
-        <!-- FORMULAIRE -->
-        <form action="https://formspree.io/f/yourformid" method="POST" class="space-y-3 text-center">
-          <div>
-            <label class="text-sm font-medium block text-left">Nom / Entreprise</label>
-            <input name="name" required class="mt-1 block w-full rounded-md border px-3 py-2" />
-          </div>
-          <div>
-            <label class="text-sm font-medium block text-left">Email</label>
-            <input name="email" type="email" required class="mt-1 block w-full rounded-md border px-3 py-2" />
-          </div>
-          <div>
-            <label class="text-sm font-medium block text-left">Téléphone</label>
-            <input name="phone" class="mt-1 block w-full rounded-md border px-3 py-2" />
-          </div>
-          <div>
-            <label class="text-sm font-medium block text-left">Votre message / Brief</label>
-            <textarea name="message" rows="4" required class="mt-1 block w-full rounded-md border px-3 py-2"></textarea>
-          </div>
-
-          <button type="submit" class="btn border border-[var(--brand)] text-[var(--brand)] px-5 py-3 rounded-md mt-3">
-            Envoyer
-          </button>
-        </form>
-      </div>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="text-sm text-gray-500 text-center py-8">
-      © <span id="year"></span> ProOnePage — Page pro en 72h · 149€
-    </footer>
 
   </main>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting){
-          entry.target.style.opacity = 1;
-          entry.target.style.transform = 'translateY(0)';
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.1 });
-    document.querySelectorAll('.fade').forEach(el => observer.observe(el));
-  </script>
 </body>
 </html>
