--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
   <style>
     :root { --brand: #001f3f; }
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; margin:0; padding:0; }
-    .btn { transition: all .18s ease; cursor: pointer; }
-    .btn:hover { transform: translateY(-3px); }
-    header { backdrop-filter: saturate(120%) blur(4px); }
+    header { backdrop-filter: saturate(120%) blur(4px); height:80px; }
     .fade { opacity: 0; transform: translateY(12px); animation: fade 0.6s forwards; }
     @keyframes fade { to { opacity: 1; transform: translateY(0); } }
-    input, textarea { outline: none; }
-    input:focus, textarea:focus { border-color: var(--brand); box-shadow: 0 0 0 2px rgba(0,31,63,0.2); }
+
+    /* Header centré */
+    .header-inner { width:100%; max-width:1200px; margin:0 auto; height:100%; display:flex; justify-content:center; align-items:center; gap:16px; }
+    .logo-box { width:50px; height:50px; background:var(--brand); color:white; font-weight:600; display:flex; align-items:center; justify-content:center; border-radius:8px; }
+    .header-text { display:flex; flex-direction:column; text-align:center; }
+    .header-text .title { color:var(--brand); font-weight:600; font-size:1.2rem; }
+    .header-text .subtitle { font-size:0.85rem; color:#555; }
 
     /* Styles HERO et animation écran PC */
     .hero-section { width:100%; padding:80px 20px; display:flex; flex-wrap:wrap; justify-content:center; align-items:center; background:#f7f7f7; }
@@ -40,25 +43,20 @@
     .dot-green { background:#27c93f; }
 
     .pc-screen-body { flex:1; padding:12px; display:flex; flex-direction:column; justify-content:space-around; }
-
-    /* Pied de l'écran */
     .pc-screen-footer { height:30px; background:#ddd; border-top:1px solid #bbb; border-radius:0 0 16px 16px; }
 
-    /* Animation "réaliste" */
     .anim-block { border-radius:6px; opacity:0; transform:translateY(15px); animation: build 2.5s ease-in-out infinite; }
     .block-text { height:16px; width:80%; margin:4px 0; background:#d1d5db; }
     .block-title { height:20px; width:50%; margin:4px 0; background:#b0c4de; }
     .block-button { height:16px; width:30%; background:#8bb1ff; margin:6px 0; }
     .block-image { height:40px; width:60%; background:#cfcfcf; margin:6px 0; }
 
-    /* Animation keyframes */
     @keyframes build {
       0% { opacity:0; transform:translateY(15px); }
       50% { opacity:0.6; transform:translateY(0); }
       100% { opacity:1; transform:translateY(0); }
     }
 
-    /* Delays différents pour plus de réalisme */
     .delay-1 { animation-delay:0.2s; }
     .delay-2 { animation-delay:0.5s; }
     .delay-3 { animation-delay:0.8s; }
@@ -73,21 +71,14 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header class="sticky top-0 z-40 bg-white/90 border-b border-gray-200">
-    <div class="w-full max-w-screen-xl mx-auto px-6 py-4 flex items-center justify-between">
-      <div class="flex items-center gap-4">
-        <div class="w-10 h-10 rounded-md bg-[var(--brand)] flex items-center justify-center text-white font-semibold">P1</div>
-        <div>
-          <div class="text-lg font-semibold" style="color:var(--brand)">ProOnePage</div>
-          <div class="text-xs text-gray-500">Page pro en 72h — 149€</div>
-        </div>
+  <!-- HEADER CENTRÉ -->
+  <header>
+    <div class="header-inner">
+      <div class="logo-box">P1</div>
+      <div class="header-text">
+        <div class="title">ProOnePage</div>
+        <div class="subtitle">Page pro en 72h — 149€</div>
       </div>
-      <nav class="flex items-center gap-4 text-sm">
-        <a href="#offre" class="hover:underline">Offre</a>
-        <a href="#exemples" class="hover:underline">Exemple</a>
-        <a href="#contact" class="btn bg-[var(--brand)] text-white px-4 py-2 rounded-md">Commander</a>
-      </nav>
     </div>
   </header>
 
@@ -155,7 +146,6 @@
       <div class="max-w-4xl mx-auto">
         <a href="https://officielstephanewinckel.vercel.app" target="_blank" rel="noopener" class="demo-thumb inline-block shadow-lg">
           <img src="./screen-site.jpeg" alt="Aperçu Dirickx Luxembourg" class="rounded-xl" />
-          <div class="demo-overlay"></div>
         </a>
         <p class="text-sm text-gray-500 mt-3">Cliquez sur l’image pour visiter le site complet.</p>
       </div>
@@ -209,10 +199,8 @@
   </footer>
 
   <script>
-    // Mettre l'année automatiquement
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Fade-in classique
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if(entry.isIntersecting){
@@ -224,7 +212,7 @@
     }, { threshold: 0.1 });
     document.querySelectorAll('.fade').forEach(el => observer.observe(el));
 
-    // Smooth scroll centré pour toutes les ancres
+    // Smooth scroll centré
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function(e) {
         e.preventDefault();
