--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
     :root { --brand: #001f3f; }
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; margin:0; padding:0; }
     header { backdrop-filter: saturate(120%) blur(4px); height:80px; }
+
     .fade { opacity: 0; transform: translateY(12px); animation: fade 0.6s forwards; }
     @keyframes fade { to { opacity: 1; transform: translateY(0); } }
 
     /* Header centré */
     .header-inner { width:100%; max-width:1200px; margin:0 auto; height:100%; display:flex; justify-content:center; align-items:center; gap:16px; }
-    .logo-box { width:50px; height:50px; background:var(--brand); color:white; font-weight:600; display:flex; align-items:center; justify-content:center; border-radius:8px; }
+    .logo-box img { height:60px; width:auto; object-fit:contain; }
     .header-text { display:flex; flex-direction:column; text-align:center; }
     .header-text .title { color:var(--brand); font-weight:600; font-size:1.2rem; }
     .header-text .subtitle { font-size:0.85rem; color:#555; }
 
-    /* Styles HERO et animation écran PC */
+    /* HERO + animation */
     .hero-section { width:100%; padding:80px 20px; display:flex; flex-wrap:wrap; justify-content:center; align-items:center; background:#f7f7f7; }
     .hero-left { flex:1 1 500px; max-width:600px; padding:0 20px; }
     .hero-right { flex:1 1 500px; max-width:600px; display:flex; justify-content:center; align-items:center; padding:20px; }
 
-    /* PC Screen réaliste */
+    /* PC Screen */
     .pc-screen-container { position: relative; width:100%; max-width:500px; height:350px; background:#e5e5e5; border-radius:16px; border:2px solid #ccc; box-shadow:0 16px 40px rgba(0,0,0,0.2); overflow:hidden; display:flex; flex-direction:column; }
     .pc-screen-top { height:30px; background:#ccc; display:flex; align-items:center; padding:0 10px; gap:6px; }
     .pc-dot { width:12px; height:12px; border-radius:50%; }
@@ -63,7 +64,7 @@
     .delay-4 { animation-delay:1.1s; }
     .delay-5 { animation-delay:1.4s; }
 
-    /* Full width sections */
+    /* Sections */
     section { width:100%; display:flex; justify-content:center; }
     .section-inner { width:100%; max-width:1200px; padding:20px; }
   </style>
@@ -71,10 +72,12 @@
 
 <body>
 
-  <!-- HEADER CENTRÉ -->
+  <!-- HEADER -->
   <header>
     <div class="header-inner">
-      <div class="logo-box">P1</div>
+      <div class="logo-box">
+        <img src="5C0D12E0-8EBD-4FAF-A265-24F8F9D57B5E.png" alt="Logo ProOnePage">
+      </div>
       <div class="header-text">
         <div class="title">ProOnePage</div>
         <div class="subtitle">Page pro en 72h — 149€</div>
@@ -193,7 +196,6 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="text-sm text-gray-500 text-center py-8">
     © <span id="year"></span> ProOnePage — Page pro en 72h · 149€
   </footer>
