--- a/index.html
+++ b/index.html
@@ -18,24 +18,49 @@
   <style>
     :root { --brand: #001f3f; }
     body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #111; margin:0; padding:0; }
-    header { backdrop-filter: saturate(120%) blur(4px); height:80px; }
 
-    .fade { opacity: 0; transform: translateY(12px); animation: fade 0.6s forwards; }
-    @keyframes fade { to { opacity: 1; transform: translateY(0); } }
+    /* HEADER centré + fond moderne */
+    header {
+      backdrop-filter: saturate(120%) blur(4px);
+      height: 90px;
+      background: linear-gradient(90deg, rgba(0,31,63,0.95), rgba(0,31,63,0.85));
+      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+    }
+    .header-inner {
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+    }
+    .header-logo {
+      height: 60px;
+      width: auto;
+    }
+    .header-text {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      color: white;
+    }
+    .header-text .title {
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
+    .header-text .subtitle {
+      font-size: 0.85rem;
+      opacity: 0.85;
+    }
 
-    /* Header centré */
-    .header-inner { width:100%; max-width:1200px; margin:0 auto; height:100%; display:flex; justify-content:center; align-items:center; gap:16px; }
-    .logo-box img { height:60px; width:auto; object-fit:contain; }
-    .header-text { display:flex; flex-direction:column; text-align:center; }
-    .header-text .title { color:var(--brand); font-weight:600; font-size:1.2rem; }
-    .header-text .subtitle { font-size:0.85rem; color:#555; }
-
-    /* HERO + animation */
+    /* HERO et animation écran PC */
     .hero-section { width:100%; padding:80px 20px; display:flex; flex-wrap:wrap; justify-content:center; align-items:center; background:#f7f7f7; }
     .hero-left { flex:1 1 500px; max-width:600px; padding:0 20px; }
     .hero-right { flex:1 1 500px; max-width:600px; display:flex; justify-content:center; align-items:center; padding:20px; }
 
-    /* PC Screen */
+    /* PC Screen réaliste */
     .pc-screen-container { position: relative; width:100%; max-width:500px; height:350px; background:#e5e5e5; border-radius:16px; border:2px solid #ccc; box-shadow:0 16px 40px rgba(0,0,0,0.2); overflow:hidden; display:flex; flex-direction:column; }
     .pc-screen-top { height:30px; background:#ccc; display:flex; align-items:center; padding:0 10px; gap:6px; }
     .pc-dot { width:12px; height:12px; border-radius:50%; }
@@ -64,20 +89,34 @@
     .delay-4 { animation-delay:1.1s; }
     .delay-5 { animation-delay:1.4s; }
 
-    /* Sections */
     section { width:100%; display:flex; justify-content:center; }
     .section-inner { width:100%; max-width:1200px; padding:20px; }
+
+    /* Effet hover doux sur les boutons */
+    .btn {
+      transition: all 0.3s ease;
+    }
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,31,63,0.2);
+    }
+
+    /* Animation légère du logo */
+    header img {
+      transition: transform 0.4s ease;
+    }
+    header img:hover {
+      transform: scale(1.05) rotate(-2deg);
+    }
   </style>
 </head>
 
 <body>
 
-  <!-- HEADER -->
+  <!-- HEADER CENTRÉ AVEC LOGO -->
   <header>
     <div class="header-inner">
-      <div class="logo-box">
-        <img src="5C0D12E0-8EBD-4FAF-A265-24F8F9D57B5E.png" alt="Logo ProOnePage">
-      </div>
+      <img src="./5C0D12E0-8EBD-4FAF-A265-24F8F9D57B5E.png" alt="ProOnePage Logo" class="header-logo">
       <div class="header-text">
         <div class="title">ProOnePage</div>
         <div class="subtitle">Page pro en 72h — 149€</div>
@@ -196,6 +235,7 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer class="text-sm text-gray-500 text-center py-8">
     © <span id="year"></span> ProOnePage — Page pro en 72h · 149€
   </footer>
